[package]
name = "grindstone-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
dirs = "4"
cfg-if = "1"

[dev-dependencies]
env_logger = "0.9"

[lib]
name = "grindstone"
path = "src/lib.rs"
