[package]
name = "grindstone-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"
tokio = { version = "1.21", features = ["full"] }
dirs = "4"
cfg-if = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["gzip", "json"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
hex = "0.4"
sha1 = "0.10"

[dev-dependencies]
env_logger = "0.9"

[lib]
name = "grindstone"
path = "src/lib.rs"
